fix image align

--- a/src/css/Exam.css
+++ b/src/css/Exam.css
@@ -42,7 +42,8 @@ img {
 }
 
 .question img {
-  margin: 25px 0;
+  margin: 0 5px;
+  vertical-align: middle;
 }
 
 .solution {
